--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-09-26
+2016-10-17
 
         * Version 1.2.0 released
         ========================
 
+        Add outcovmat parameter to ctlike (#1863)
         Fix ctbin segfault bug for varying energy thresholds (#1850)
         Make csresmap enumbins parameter hidden (#1844)
         Rename ctskymap::map() to ctskymap::skymap() (#1828)
