--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-10-17
+2016-11-10
 
         * Version 1.2.0 released
         ========================
 
+        Fix energy boundary handline in cssens (#1873)
         Add outcovmat parameter to ctlike (#1863)
         Add publish parameter and methods to ctobssim, ctselect, cslightcrv and csspec (#1871)
         Add csviscube script (#1853)
