--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.2.0
 
-10 November 2016
+21 November 2016
 
 
 Introduction
@@ -65,6 +65,9 @@ of the tool (#1835).
 
 A publish() method has been added that publishes the simulated event lists on
 a VO hub (#1871).
+
+The "startindex" parameter has been added to set the initial index for multiple
+event lists (#1878).
 
 
 ctselect - CTA event selection
