Enhance output of csroot2caldb script

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2017-03-07
+
+        * Version 1.2.1 released
+        ========================
+
+        Enhance logfile output of csroot2caldb script
+
+
 2017-02-09
 
         * Version 1.2.0 released
