--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-03-13
+2017-03-18
 
         * Version 1.3.0 released
         ========================
 
+        Take into account RoI in ctskymap
         Set local language to english (#1370)
         Enhance logfile output of csroot2caldb script
         Set default deadc value to 0.98 (CTA has <2% deadtime)
