--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.0.dev1
 
-13 March 2017
+18 March 2017
 
 
 Introduction
@@ -52,7 +52,8 @@ None
 
 ctskymap - CTA sky mapping
 --------------------------
-None
+Any RoI is now taken into account in ctskymap so that if IRF background
+subtraction is requested the counts and background maps are coherent.
 
 
 ctmodel - CTA counts cube modelling
