--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
-2017-03-18
+2017-03-21
 
         * Version 1.3.0 released
         ========================
 
-        Take into account RoI in ctskymap (#1975)
+        Take into account RoI in ctskymap and use numerical integration for IRF (#1975)
         Set local language to english (#1370)
         Enhance logfile output of csroot2caldb script
         Set default deadc value to 0.98 (CTA has <2% deadtime)
