--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.0.dev1
 
-18 March 2017
+21 March 2017
 
 
 Introduction
@@ -53,7 +53,10 @@ None
 ctskymap - CTA sky mapping
 --------------------------
 Any RoI is now taken into account in ctskymap so that if IRF background
-subtraction is requested the counts and background maps are coherent
+subtraction is requested the counts and background maps are coherent. In
+addition, the energy integration over the background template is now done
+numerically so that strong variations in the background rate, such as
+those occuring close to the threshold, are correctly taken into account
 (#1975).
 
 
