--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.0.dev1
 
-21 March 2017
+22 March 2017
 
 
 Introduction
@@ -112,7 +112,10 @@ None
 
 cscripts
 --------
-None
+The csebins script has been added that generates an energy boundaries
+extension that can be used for a stacked analysis. The energy boundaries
+are set as function of the variation in the effective area and background
+rates of the Instrument Response Function (#1976).
 
 
 Examples
