--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-03-28
+2017-04-04
 
         * Version 1.3.0 released
         ========================
 
+        Raise exception instead of exiting with return code in Python tests (#1983)
         Support of map cubes lying outside RoI in ctobssim 
         Support energy boundary FITS file in ctmapcube (#1978)
         Add csebins script (#1976)
