--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.0.dev1
 
-28 March 2017
+4 April 2017
 
 
 Introduction
@@ -11,7 +11,9 @@ ctools release with respect to the precedent release.
 
 Configuration
 -------------
-None
+The Python unit tests now raise exceptions instead of exiting with a non-
+zero return code so that the user is not thrown out of Python after calling
+ctools.test() and cscripts.test() (#1983).
 
 
 Python interface
