--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-04-04
+2017-04-05
 
         * Version 1.3.0 released
         ========================
 
+        Copy cscripts into bin directory instead of creating a symbolic links (#1987)
         If code originates from Git, always compile the Python bindings (#1985)
         Raise exception instead of exiting with return code in Python tests (#1983)
         Support of map cubes lying outside RoI in ctobssim 
