--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.0.dev1
 
-4 April 2017
+5 April 2017
 
 
 Introduction
@@ -20,6 +20,10 @@ to developer mode which implies that the Python bindings are always built.
 This solves the problem that occured for developers that could not get rid
 of existing Python wrappers, even if they modified the Python interface
 (#1985).
+
+The cscripts are now copied into the bin directory upon installation instead
+of creating symbolic links. This avoids problems on some VM file systems on
+which creation of symbolic links does not work (#1987).
 
 
 Python interface
