--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-04-05
+2017-04-06
 
         * Version 1.3.0 released
         ========================
 
+        Use correct ROOT histograms in csroot2caldb
         Implement regression scheme in cssens and remove num_avg parameter (#1989)
         Copy cscripts into bin directory instead of creating a symbolic links (#1987)
         If code originates from Git, always compile the Python bindings (#1985)
