--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Johan Bregeon (johan.bregeon@lupm.in2p3.fr)
 Rolf Buehler (rolf.buehler@desy.de)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
+Leonardo Di Venere (leonardo.divenere@ba.infn.it)
 Florent Forest (florent.forest@isae.fr)
 Lucie Gerard (lgerard@wgs18.zeuthen.desy.de)
 Maria Haupt (maria.haupt@desy.de)
