--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-04-10
+2017-04-11
 
         * Version 1.3.0 released
         ========================
 
+        Add ctprob tool (#1991)
         ctlike stores covariance matrix in either CSV or FITS format (#1863)
         Use correct ROOT histograms in csroot2caldb
         Implement regression scheme in cssens and remove num_avg parameter (#1989)
