--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Johan Bregeon (johan.bregeon@lupm.in2p3.fr)
 Rolf Buehler (rolf.buehler@desy.de)
+Joshua Cardenzana (jcardenzana@irap.omp.eu)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
 Leonardo Di Venere (leonardo.divenere@ba.infn.it)
