--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 1.3.0 released
         ========================
 
+        Add missing *.i SWIG file into release tarball (#2114)
         ctobssim adds Monte Carlo identifiers to simulated events (#1483)
         Add "phase" parameter to ctselect (#1996)
         Add ctphase tool (#1982)
