--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-05-23
+2017-05-31
 
         * Version 1.3.0 released
         ========================
 
+        Correct covariance matrix computation in ctbutterfly (#2121)
         Add missing *.i SWIG file into release tarball (#2114)
         ctobssim adds Monte Carlo identifiers to simulated events (#1483)
         Add "phase" parameter to ctselect (#1996)
