--- a/ChangeLog
+++ b/ChangeLog
@@ -1,25 +1,26 @@
-2017-05-31
+2017-06-07
 
         * Version 1.3.0 released
         ========================
 
         Correct covariance matrix computation in ctbutterfly (#2121)
         Add missing *.i SWIG file into release tarball (#2114)
-        ctobssim adds Monte Carlo identifiers to simulated events (#1483)
         Add "phase" parameter to ctselect (#1996)
-        Add ctphase tool (#1982)
         Add ctprob tool (#1991)
-        ctlike stores covariance matrix in either CSV or FITS format (#1863)
-        Use correct ROOT histograms in csroot2caldb
         Implement regression scheme in cssens and remove num_avg parameter (#1989)
-        Implement Gaussian error propagation in ctbutterfly (#1862)
         Copy cscripts into bin directory instead of creating a symbolic links (#1987)
         If code originates from Git, always compile the Python bindings (#1985)
         Raise exception instead of exiting with return code in Python tests (#1983)
-        Support of map cubes lying outside RoI in ctobssim 
+        Add ctphase tool (#1982)
         Support energy boundary FITS file in ctmapcube (#1978)
         Add csebins script (#1976)
         Consider RoI in ctskymap and use numerical integration for IRF (#1975)
+        ctlike stores covariance matrix in either CSV or FITS format (#1863)
+        Use correct ROOT histograms in csroot2caldb
+        Implement Gaussian error propagation in ctbutterfly (#1862)
+        Support of map cubes lying outside RoI in ctobssim 
+        ctbkgcube throws exception if no background model is found (#1652)
+        ctobssim adds Monte Carlo identifiers to simulated events (#1483)
         Set local language to english (#1370)
         Enhance logfile output of csroot2caldb script
         Set default deadc value to 0.98 (CTA has <2% deadtime)
