--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2017-05-30
+
+        * Bug fix version 1.2.1 released
+        ================================
+
+        Include SWIG interface files into tarball
+        Avoid double execution to ctexpcube
+
+
 2017-02-09
 
         * Version 1.2.0 released
