--- a/doc/source/users/release_history/1.2.1.rst
+++ b/doc/source/users/release_history/1.2.1.rst
@@ -1,7 +1,7 @@
 .. _1.2.1:
 
 ctools 1.2.1 release (30 May 2017)
-======================================
+==================================
 
 Overview
 --------
@@ -11,4 +11,4 @@ ctools 1.2.1 is a bug fix for ctools release 1.2.
 The following bugs have been fixed:
 
 * Include SWIG interface files into tarball
-* Avoid double execution to ctexpcube
+* Avoid double execution to :ref:`ctexpcube`
