--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2017-06-23
 
+        * Version 1.4.0 released
+        ========================
+
+
+2017-06-23
+
         * Bug fix version 1.3.1 released
         ================================
 
