--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,10 @@
-2017-06-23
+2017-06-27
 
         * Bug fix version 1.3.1 released
         ================================
 
+        Use MigMatrixNoTheta2cut_offaxis and AngularPSF2DEtrue_offaxis histograms to
+          compute PSF and energy dispersion IRFs (#2135)
         Properly forward working log file pointer in ctobssim::set_mc_id_names() (#2123)
         Correct computation of standard deviations in cssrcdetect
         csobsselect accepts an observation container upon construction
