--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.1
 
-23 June 2017
+27 June 2017
 
 
 Introduction
@@ -121,6 +121,10 @@ cscripts
 The csobsselect script now accepts an observation container upon construction.
 
 The standard deviation computation in cssrcdetect has been corrected.
+
+The csroot2caldb script now uses the MigMatrixNoTheta2cut_offaxis and
+AngularPSF2DEtrue_offaxis ROOT histograms to compute the energy dispersion matrix
+and the PSF shape (#2135).
 
 
 Examples
