--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-06-27
+2017-06-30
 
         * Bug fix version 1.3.1 released
         ================================
 
+        Fix csresmap significance computation error (#2136)
         Use MigMatrixNoTheta2cut_offaxis and AngularPSF2DEtrue_offaxis histograms to
           compute PSF and energy dispersion IRFs (#2135)
         Properly forward working log file pointer in ctobssim::set_mc_id_names() (#2123)
