--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.1
 
-27 June 2017
+29 June 2017
 
 
 Introduction
@@ -125,6 +125,10 @@ The standard deviation computation in cssrcdetect has been corrected.
 The csroot2caldb script now uses the MigMatrixNoTheta2cut_offaxis and
 AngularPSF2DEtrue_offaxis ROOT histograms to compute the energy dispersion matrix
 and the PSF shape (#2135).
+
+The csresmap threw an exception for the SIGNIFICANCE method when the model map
+contained zero entries. This has been fixed now by properly handling the case of
+zero entries (#2136).
 
 
 Examples
