Update change log and release history

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-2017-06-23
+2017-07-03
 
         * Version 1.4.0 released
         ========================
+
+        Install ctools header files (#2145)
 
 
 2017-06-23
