--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2017-06-30
+2017-07-03
 
         * Bug fix version 1.3.1 released
         ================================
@@ -6,6 +6,7 @@
         Fix csresmap significance computation error (#2136)
         Use MigMatrixNoTheta2cut_offaxis and AngularPSF2DEtrue_offaxis histograms to
           compute PSF and energy dispersion IRFs (#2135)
+        Add self.logFileOpen() to cstsmapsplit.execute() method (#2127)
         Properly forward working log file pointer in ctobssim::set_mc_id_names() (#2123)
         Correct computation of standard deviations in cssrcdetect
         csobsselect accepts an observation container upon construction
