--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.3.1
 
-29 June 2017
+3 July 2017
 
 
 Introduction
@@ -129,6 +129,9 @@ and the PSF shape (#2135).
 The csresmap threw an exception for the SIGNIFICANCE method when the model map
 contained zero entries. This has been fixed now by properly handling the case of
 zero entries (#2136).
+
+A call to self.logFileOpen() has been added to the cstsmapsplit.execute() method
+so that a log file is written when the script is executed (#2127).
 
 
 Examples
