--- a/doc/source/admin/release_history/1.3.1.rst
+++ b/doc/source/admin/release_history/1.3.1.rst
@@ -1,7 +1,7 @@
 .. _1.3.1:
 
-ctools 1.3.1 release (TBD)
-==========================
+ctools 1.3.1 release
+====================
 
 Overview
 --------
@@ -21,3 +21,8 @@ The following bugs have been fixed:
   Properly forward working log file pointer in ``ctobssim::set_mc_id_names()``
 * Correct computation of standard deviations in :ref:`cssrcdetect`
 * :ref:`csobsselect` accepts an observation container upon construction
+
+The following improvements have been made:
+
+* [`2147 <https://cta-redmine.irap.omp.eu/issues/2147>`_] -
+  Reduce computation time of ctmodel and parallelize using OpenMP
