--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2017-07-07
+2017-07-11
 
         * Bug fix version 1.3.1 released
         ================================
 
+        ctbkgcube creates XML files compliant with non-CTA instruments (#2140)
         Reduce computation time of ctmodel and parallelize using OpenMP (#2147)
         Fix csresmap significance computation error (#2136)
         Use MigMatrixNoTheta2cut_offaxis and AngularPSF2DEtrue_offaxis histograms to
