--- a/doc/source/admin/release_history/1.3.1.rst
+++ b/doc/source/admin/release_history/1.3.1.rst
@@ -1,7 +1,7 @@
 .. _1.3.1:
 
-ctools 1.3.1 release
-====================
+ctools 1.3.1 release (20 July 2017)
+===================================
 
 Overview
 --------
